@@ -1,7 +1,7 @@
-set HEPREP=%FREEHEP%/hep/graphics/heprep
-copy %FREEHEP%/org/freehep/jni/FreeHepTypes.h include
-copy %FREEHEP%/geant4/*.h include
-copy %FREEHEP%/geant4/*.hh include
-copy %FREEHEP%/include/HEPREP/*.h include/HEPREP
-copy %FREEHEP%/geant4/*.cc src
+set HEPREP=%FREEHEP%\hep\graphics\heprep
+copy %HEPREP%\org\freehep\jni\FreeHepTypes.h include
+copy %HEPREP%\geant4\*.h include
+copy %HEPREP%\geant4\*.hh include
+copy %HEPREP%\include\HEPREP\*.h include\HEPREP
+copy %HEPREP%\geant4\*.cc src
 
